Add custom favicon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+       <link rel="icon" href="public/farmer.jpg" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FarmAssist - AI-Powered Smart Farming for Indian Farmers</title>
     <meta name="description" content="AI crop disease detection, real-time mandi prices, expert guidance & direct marketplace. Empowering 50,000+ Indian farmers to reduce crop losses and increase income." />
